tests/snapshots/snapshots__fixture_react_hot_toast_level2.snap
---
source: tests/snapshots.rs
expression: output
---
components/checkmark.tsx
     3→const circleAnimation = keyframes`
    13→const checkmarkAnimation = keyframes`
    29→export interface CheckmarkTheme {
    34→export const CheckmarkIcon = styled('div')<CheckmarkTheme>`
components/error.tsx
     3→const circleAnimation = keyframes`
    13→const firstLineAnimation = keyframes`
    23→const secondLineAnimation = keyframes`
    33→export interface ErrorTheme {
    38→export const ErrorIcon = styled('div')<ErrorTheme>`
components/loader.tsx
     3→const rotate = keyframes`
    12→export interface LoaderTheme {
    17→export const LoaderIcon = styled('div')<LoaderTheme>`
components/toast-bar.tsx
     8→const enterAnimation = (factor: number) => `
    13→const exitAnimation = (factor: number) => `
    18→const fadeInAnimation = `0%{opacity:0;} 100%{opacity:1;}`;
    19→const fadeOutAnimation = `0%{opacity:1;} 100%{opacity:0;}`;
    22→const ToastBarBase = styled('div')`
    38→const Message = styled('div')`
    47→interface ToastBarProps {
    57→const getAnimationStyle = (
    75→export const ToastBar: React.FC<ToastBarProps> = React.memo(
components/toast-icon.tsx
     9→const StatusWrapper = styled('div')`
    13→const IndicatorWrapper = styled('div')`
    22→const enter = keyframes`
    32→export const AnimatedIconWrapper = styled('div')`
    41→export type IconThemes = Partial<{
    47→export const ToastIcon: React.FC<{
components/toaster.tsx
    15→const ToastWrapper = ({
    47→const getPositionStyle = (
    76→const activeClass = css`
    83→const DEFAULT_OFFSET = 16;
    85→export const Toaster: React.FC<ToasterProps> = ({
core/store.ts
     4→export const TOAST_EXPIRE_DISMISS_DELAY = 1000;
     5→export const TOAST_LIMIT = 20;
     6→export const DEFAULT_TOASTER_ID = 'default';
     8→interface ToasterSettings {
    12→export enum ActionType {
    22→export type Action =
    52→interface ToasterState {
    58→interface State {
    62→export const reducer = (state: ToasterState, action: Action): ToasterState => {
   136→const listeners: Array<
   140→const defaultToasterState: ToasterState = {
   149→export const dispatch = (action: Action, toasterId = DEFAULT_TOASTER_ID) => {
   161→export const dispatchAll = (action: Action) =>
   164→export const getToasterIdFromToastId = (toastId: string) =>
   169→export const createDispatch =
   175→export const defaultTimeouts: {
   185→export const useStore = (
core/toast.ts
    19→type Message = ValueOrFunction<Renderable, Toast>;
    21→type ToastHandler = (message: Message, options?: ToastOptions) => string;
    23→const createToast = (
    42→const createHandler =
    55→const toast = (message: Message, opts?: ToastOptions) =>
core/types.ts
     3→export type ToastType = 'success' | 'error' | 'loading' | 'blank' | 'custom';
     4→export type ToastPosition =
    12→export type Renderable = React.ReactElement | string | null;
    14→export interface IconTheme {
    19→export type ValueFunction<TValue, TArg> = (arg: TArg) => TValue;
    20→export type ValueOrFunction<TValue, TArg> =
    24→const isFunction = <TValue, TArg>(
    29→export const resolveValue = <TValue, TArg>(
    34→export interface Toast {
    60→export type ToastOptions = Partial<
    76→export type DefaultToastOptions = ToastOptions & {
    80→export interface ToasterProps {
    91→export interface ToastWrapperProps {
core/use-toaster.ts
     6→export const REMOVE_DELAY = 1000;
     8→export const useToaster = (
core/utils.ts
     1→export const genId = (() => {
     8→export const prefersReducedMotion = (() => {
headless/index.ts
index.ts
