tests/snapshots/snapshots__fixture_react_hot_toast_level4.snap
---
source: tests/snapshots.rs
expression: output
---
components/checkmark.tsx
     3→const circleAnimation = keyframes`
    13→const checkmarkAnimation = keyframes`
    29→export interface CheckmarkTheme {
    30→  primary?: string;
    31→  secondary?: string;
    32→}
    34→export const CheckmarkIcon = styled('div')<CheckmarkTheme>`
components/error.tsx
     3→const circleAnimation = keyframes`
    13→const firstLineAnimation = keyframes`
    23→const secondLineAnimation = keyframes`
    33→export interface ErrorTheme {
    34→  primary?: string;
    35→  secondary?: string;
    36→}
    38→export const ErrorIcon = styled('div')<ErrorTheme>`
components/loader.tsx
     3→const rotate = keyframes`
    12→export interface LoaderTheme {
    13→  primary?: string;
    14→  secondary?: string;
    15→}
    17→export const LoaderIcon = styled('div')<LoaderTheme>`
components/toast-bar.tsx
     8→const enterAnimation = (factor: number) => `
    13→const exitAnimation = (factor: number) => `
    18→const fadeInAnimation = `0%{opacity:0;} 100%{opacity:1;}`;
    19→const fadeOutAnimation = `0%{opacity:1;} 100%{opacity:0;}`;
    22→const ToastBarBase = styled('div')`
    38→const Message = styled('div')`
    47→interface ToastBarProps {
    48→  toast: Toast;
    49→  position?: ToastPosition;
    50→  style?: React.CSSProperties;
    51→  children?: (components: {
    52→    icon: Renderable;
    53→    message: Renderable;
    54→  }) => Renderable;
    55→}
    57→const getAnimationStyle = (
    75→export const ToastBar: React.FC<ToastBarProps> = React.memo(
components/toast-icon.tsx
     9→const StatusWrapper = styled('div')`
    13→const IndicatorWrapper = styled('div')`
    22→const enter = keyframes`
    32→export const AnimatedIconWrapper = styled('div')`
    41→export type IconThemes = Partial<{
    47→export const ToastIcon: React.FC<{
components/toaster.tsx
    15→const ToastWrapper = ({
    47→const getPositionStyle = (
    76→const activeClass = css`
    83→const DEFAULT_OFFSET = 16;
    85→export const Toaster: React.FC<ToasterProps> = ({
core/store.ts
     4→export const TOAST_EXPIRE_DISMISS_DELAY = 1000;
     5→export const TOAST_LIMIT = 20;
     6→export const DEFAULT_TOASTER_ID = 'default';
     8→interface ToasterSettings {
     9→  toastLimit: number;
    10→}
    12→export enum ActionType {
    13→  ADD_TOAST,
    14→  UPDATE_TOAST,
    15→  UPSERT_TOAST,
    16→  DISMISS_TOAST,
    17→  REMOVE_TOAST,
    18→  START_PAUSE,
    19→  END_PAUSE,
    20→}
    22→export type Action =
    52→interface ToasterState {
    53→  toasts: Toast[];
    54→  settings: ToasterSettings;
    55→  pausedAt: number | undefined;
    56→}
    58→interface State {
    59→  [toasterId: string]: ToasterState;
    60→}
    62→export const reducer = (state: ToasterState, action: Action): ToasterState => {
   136→const listeners: Array<
   140→const defaultToasterState: ToasterState = {
   149→export const dispatch = (action: Action, toasterId = DEFAULT_TOASTER_ID) => {
   161→export const dispatchAll = (action: Action) =>
   164→export const getToasterIdFromToastId = (toastId: string) =>
   169→export const createDispatch =
   175→export const defaultTimeouts: {
   185→export const useStore = (
core/toast.ts
    19→type Message = ValueOrFunction<Renderable, Toast>;
    21→type ToastHandler = (message: Message, options?: ToastOptions) => string;
    23→const createToast = (
    42→const createHandler =
    55→const toast = (message: Message, opts?: ToastOptions) =>
core/types.ts
     3→export type ToastType = 'success' | 'error' | 'loading' | 'blank' | 'custom';
     4→export type ToastPosition =
    12→export type Renderable = React.ReactElement | string | null;
    14→export interface IconTheme {
    15→  primary: string;
    16→  secondary: string;
    17→}
    19→export type ValueFunction<TValue, TArg> = (arg: TArg) => TValue;
    20→export type ValueOrFunction<TValue, TArg> =
    24→const isFunction = <TValue, TArg>(
    29→export const resolveValue = <TValue, TArg>(
    34→export interface Toast {
    35→  type: ToastType;
    36→  id: string;
    37→  toasterId?: string;
    38→  message: ValueOrFunction<Renderable, Toast>;
    39→  icon?: Renderable;
    40→  duration?: number;
    41→  pauseDuration: number;
    42→  position?: ToastPosition;
    43→  removeDelay?: number;
    44→
    45→  ariaProps: {
    46→    role: 'status' | 'alert';
    47→    'aria-live': 'assertive' | 'off' | 'polite';
    48→  };
    49→
    50→  style?: CSSProperties;
    51→  className?: string;
    52→  iconTheme?: IconTheme;
    53→
    54→  createdAt: number;
    55→  visible: boolean;
    56→  dismissed: boolean;
    57→  height?: number;
    58→}
    60→export type ToastOptions = Partial<
    76→export type DefaultToastOptions = ToastOptions & {
    80→export interface ToasterProps {
    81→  position?: ToastPosition;
    82→  toastOptions?: DefaultToastOptions;
    83→  reverseOrder?: boolean;
    84→  gutter?: number;
    85→  containerStyle?: React.CSSProperties;
    86→  containerClassName?: string;
    87→  toasterId?: string;
    88→  children?: (toast: Toast) => React.ReactElement;
    89→}
    91→export interface ToastWrapperProps {
    92→  id: string;
    93→  className?: string;
    94→  style?: React.CSSProperties;
    95→  onHeightUpdate: (id: string, height: number) => void;
    96→  children?: React.ReactNode;
    97→}
core/use-toaster.ts
     6→export const REMOVE_DELAY = 1000;
     8→export const useToaster = (
core/utils.ts
     1→export const genId = (() => {
     8→export const prefersReducedMotion = (() => {
headless/index.ts
index.ts
