tests/snapshots/snapshots__fixture_react_hot_toast_root_level2.snap
---
source: tests/snapshots.rs
expression: output
---
README.md
    28→## Features
    37→## Installation
    39→#### With pnpm
    45→#### With NPM
    51→## Getting Started
    70→## Documentation
jest.config.js
site/README.md
     3→## Getting Started
    17→## Learn More
    26→## Deploy on Vercel
site/components/code.tsx
     8→const theme
   104→export const Code
site/components/docs-layout.tsx
     8→const TableItem
    19→const TableHeader
    27→export default function DocsLayout
site/components/emoji-button.tsx
     1→export const EmojiButton
site/components/sections/footer.tsx
     4→export function Footer
site/components/sections/splitbee-counter.tsx
     4→export const useSplitbeeCount
    36→export const SplitbeeCounter
site/components/sections/toast-example.tsx
     7→const examples
   270→export const ToastExample
site/components/sections/toaster-example.tsx
     8→export const positions
    17→export const ToasterExample
site/next-env.d.ts
site/next.config.mjs
     5→const withMDX = nextMdx({
    15→const nextConfig = {
    17→  webpack(config) {
    24→  async rewrites() {
site/pages/_app.tsx
    12→const components
    71→function MyApp
site/pages/index.tsx
    22→const version
    24→const Feature
    31→const Step
    49→const Steps
    88→const Features
   102→export default function Home
site/postcss.config.js
site/tailwind.config.js
site/types/mdx.d.ts
site/types/svg.d.ts
     1→interface SvgrComponent
     5→  const value
src/components/checkmark.tsx
     3→const circleAnimation
    13→const checkmarkAnimation
    29→export interface CheckmarkTheme
    34→export const CheckmarkIcon
src/components/error.tsx
     3→const circleAnimation
    13→const firstLineAnimation
    23→const secondLineAnimation
    33→export interface ErrorTheme
    38→export const ErrorIcon
src/components/loader.tsx
     3→const rotate
    12→export interface LoaderTheme
    17→export const LoaderIcon
src/components/toast-bar.tsx
     8→const enterAnimation
    13→const exitAnimation
    18→const fadeInAnimation
    19→const fadeOutAnimation
    22→const ToastBarBase
    38→const Message
    47→interface ToastBarProps
    57→const getAnimationStyle
    75→export const ToastBar
src/components/toast-icon.tsx
     9→const StatusWrapper
    13→const IndicatorWrapper
    22→const enter
    32→export const AnimatedIconWrapper
    41→export type IconThemes
    47→export const ToastIcon
src/components/toaster.tsx
    15→const ToastWrapper
    47→const getPositionStyle
    76→const activeClass
    83→const DEFAULT_OFFSET
    85→export const Toaster
src/core/store.ts
     4→export const TOAST_EXPIRE_DISMISS_DELAY
     5→export const TOAST_LIMIT
     6→export const DEFAULT_TOASTER_ID
     8→interface ToasterSettings
    12→export enum ActionType
    22→export type Action
    52→interface ToasterState
    58→interface State
    62→export const reducer
   136→const listeners
   140→const defaultToasterState
   149→export const dispatch
   161→export const dispatchAll
   164→export const getToasterIdFromToastId
   169→export const createDispatch
   175→export const defaultTimeouts
   185→export const useStore
src/core/toast.ts
    19→type Message
    21→type ToastHandler
    23→const createToast
    42→const createHandler
    55→const toast
src/core/types.ts
     3→export type ToastType
     4→export type ToastPosition
    12→export type Renderable
    14→export interface IconTheme
    19→export type ValueFunction
    20→export type ValueOrFunction
    24→const isFunction
    29→export const resolveValue
    34→export interface Toast
    60→export type ToastOptions
    76→export type DefaultToastOptions
    80→export interface ToasterProps
    91→export interface ToastWrapperProps
src/core/use-toaster.ts
     6→export const REMOVE_DELAY
     8→export const useToaster
src/core/utils.ts
     1→export const genId
     8→export const prefersReducedMotion
src/headless/index.ts
src/index.ts
tsup.config.ts
     4→const commonConfig: Options = {
