tests/snapshots/snapshots__fixture_semver_level3.snap
---
source: tests/snapshots.rs
expression: output
---
comparator.js
     3→const ANY = Symbol('SemVer ANY')
     5→class Comparator {
     6→  static get ANY () {
    10→  constructor (comp, options) {
    36→  parse (comp) {
    57→  toString () {
    61→  test (version) {
    79→  intersects (comp, options) {
index.js
range.js
     3→const SPACE_CHARACTERS = /\s+/g
     6→class Range {
     7→  constructor (range, options) {
    73→  get range () {
    92→  format () {
    96→  toString () {
   100→  parseRange (range) {
   170→  intersects (range, options) {
   193→  test (version) {
   218→const cache = new LRU()
   233→const isNullSet = c => c.value === '<0.0.0-0'
   234→const isAny = c => c.value === ''
   238→const isSatisfiable = (comparators, options) => {
   257→const parseComparator = (comp, options) => {
   271→const isX = id => !id || id.toLowerCase() === 'x' || id === '*'
   280→const replaceTildes = (comp, options) => {
   288→const replaceTilde = (comp, options) => {
   324→const replaceCarets = (comp, options) => {
   332→const replaceCaret = (comp, options) => {
   385→const replaceXRanges = (comp, options) => {
   393→const replaceXRange = (comp, options) => {
   470→const replaceStars = (comp, options) => {
   478→const replaceGTE0 = (comp, options) => {
   491→const hyphenReplace = incPr => ($0,
   523→const testSet = (set, version, options) => {
semver.js
     9→class SemVer {
    10→  constructor (version, options) {
    81→  format () {
    89→  toString () {
    93→  compare (other) {
   109→  compareMain (other) {
   135→  comparePre (other) {
   168→  compareBuild (other) {
   194→  inc (release, identifier, identifierBase) {
